Fix warning and add spacing

--- a/src/components/SignUp/index.css
+++ b/src/components/SignUp/index.css
@@ -23,6 +23,7 @@
 .emailSignUpBtn {
     color: #ef005c;
     border: solid 1px #ef005c;
+    margin-top: 1vh;
     margin-bottom: 1vh;
 }
 
